<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Asilapp</string>
    <string name="title_user">Utente</string>
    <string name="title_video">Video</string>
    <string name="title_share">Condividi</string>
    <string name="textDB">Text DB</string>
    <string name="share_data">Condividi i dati</string>
    <string name="title_shop">Spese</string>
    <string name="title_map">Mappa</string>
    <string name="dati_anagrafici">Dati anagrafici</string>
    <string name="patologie">Patologie</string>
    <string name="title_gestioneUtenti">Gestione utenti</string>
    <string name="title_datiOperatore">Info Personali</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Registrazione</string>
    <string name="click_to_login">Clicca qui per il login</string>
    <string name="click_to_register">Clicca qui per la registrazione</string>
    <string name="logout">Logout</string>
    <string name="età">Età: </string>
    <string name="condividi">Condividi</string>
    <string name="cognome">Cognome: </string>
    <string name="nome">Nome: </string>
    <string name="first_name">Nome</string>
    <string name="last_name">Cognome</string>
    <string name="age">Età: </string>
    <string name="place_of_birth">Luogo di nascita: </string>
    <string name="title_activity_operator">Sezione operatore</string>
    <string name="codice_operatore">Codice operatore</string>
    <string name="confirmed">Conferma</string>
    <string name="userID">Utente Id: </string>
    <string name="condivisione_dati">Condivisione Dati</string>
    <string name="title_sensori">Sensori</string>
    <string name="title_cassettaAttrezzi">Cassetta Attrezzi</string>
    <string name="title_aggiungiPatologia">Aggiungi patologia</string>
    <string name="title_shopConfirmed">\n</string>
    <string name="title_modificaPatologia">Modifica livello patologia</string>
    <string name="accesso_diretto_utente">Accesso diretto come utente</string>
    <string name="accesso_diretto_operatore">Accesso diretto come operatore</string>
    <string name="visita">Visita</string>
    <string name="temperatura">Temperatura</string>
    <string name="glucometro">Glucometro</string>
    <string name="sfigmomanometro">Sfigmomanometro</string>
    <string name="bilancia">Bilancia </string>
    <string name="emoglobinometro">emoglobinometro</string>
    <string name="no_sensore">Sensore non disponibile</string>
    <string name="sensore">Sensore</string>
    <string name="condividi_dati_anagrafici">condividi dati anagrafici</string>
    <string name="richiesta_aggiornamento_patologia">richiesta aggiornamento patologia</string>
    <string name="spiegazione_malattie_video">Spiegazione malattie genetiche</string>
    <string name="esercizi_riabilitazione_video">Esercizi riabilitazione</string>
    <string name="richiesta_inviata_con_successo">Richiesta inviata con successo</string>
    <string name="errore_invio_richiesta">Errore invio richiesta</string>
    <string name="prodotto_registrato_successo">Prodotto registrato con successo</string>
    <string name="prodotto_registrato_fallito">Errore registrazione prodotto</string>
    <string name="categoria_prodotto">Categoria:</string>
    <string name="nome_prodotto">Prodotto:</string>
    <string name="costo_prodotto">Costo:</string>
    <string name="data_prodotto">Data:</string>
    <string name="password_non_corretta">Password non corretta</string>
    <string name="accedi">Accedi</string>
    <string name="inserisci_password">Inserisci la password</string>
    <string name="richiesta_scaduta">Richiesta scaduta</string>
    <string name="richiesta_attiva">Richiesta attiva</string>
    <string name="inserire_nome_livello_patologia">Inserire nome e livello della patologia</string>
    <string name="successo_aggiunta">Patologia aggiunta con successo</string>
    <string name="errore_aggiunta">Errore aggiunta</string>
    <string name="successo_modifica">Livello aggiornato con successo</string>
    <string name="errore_modifica">Errore modifica</string>
    <string name="nome_patologia">Nome patologia</string>
    <string name="livello_patologia">Livello patologia</string>
    <string name="modifica_livello_patologia">Modifica livello patologia</string>
    <string name="titolo_video">Video</string>
    <string name="guarda_video">Guarda video</string>
    <string name="malattie">Malattie</string>
    <string name="esercizi">Esercizi</string>
    <string name="inserisci_email">Inserisci email</string>
    <string name="login_effettuato_successo">Login effettuato con successo</string>
    <string name="autenticazione_fallita">Autenticazione fallita</string>
    <string name="inserisci_eta_valida">Inserisci età valida</string>
    <string name="inserisci_nome">Inserisci nome</string>
    <string name="inserisci_cognome">Inserisci cognome</string>
    <string name="inserisci_luogo_nascita">Inserisci luogo di nascita</string>
    <string name="account_creato">Account creato</string>
    <string name="codice_operatore_errato">Codice operatore errato</string>
    <string name="account_operatore_creato">Account operatore creato</string>
    <string name="gestione_spese">Gestione spese</string>
    <string name="registra_spesa">Registra spesa</string>
    <string name="altre_azioni">Altre azioni</string>
    <string name="spese_settimanali">Spese settimanali</string>
    <string name="spese_mensili">Spese mensili</string>
    <string name="spese_categoria">Spese per categoria</string>
    <string name="riepilogo_spesa">Riepilogo spesa</string>
    <string name="registra_altre_spese">Registra altre spese</string>
    <string name="riepilogo_spesa_categoria">Riepilogo spesa per categoria</string>
    <string name="visualizza_spese">Visualizza le spese</string>
    <string name="riepilogo_spese_mensili">Riepilogo spese mensili</string>
    <string name="seleziona_primo_giorno_mese">Seleziona il primo giorno del mese:</string>
    <string name="riepilogo_spese_settimanali">Riepilogo spese settimanali</string>
    <string name="seleziona_primo_giorno_settimana">Seleziona il primo giorno della settimana:</string>
</resources>