<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user_24dp"
        android:title="@string/title_user" />

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_video" />

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/title_share" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shopping_bag_24"
        android:title="@string/title_shop" />



</menu>