<?xml version="1.0" encoding="utf-8"?>
<!-- prodotto_item.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_prodotto"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria_prodotto"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textViewCosto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costo_prodotto"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_prodotto"
        android:textSize="16sp"/>

</LinearLayout>
