<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_user"
        android:name="it.uniba.dib.sms23246.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_video"
        android:name="it.uniba.dib.sms23246.ui.video.VideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="it.uniba.dib.sms23246.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" >
    </fragment>

    <fragment
        android:id="@+id/navigation_share"
        android:name="it.uniba.dib.sms23246.ui.share.ShareFragment"
        android:label="@string/title_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="it.uniba.dib.sms23246.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_shopConfirmed"
        android:name="it.uniba.dib.sms23246.ui.shop.ShopConfirmedFragment"
        android:label="@string/title_shopConfirmed"
        tools:layout="@layout/fragment_shopconfirmed" >
    </fragment>

    <fragment
        android:id="@+id/navigation_speseSettimanali"
        android:name="it.uniba.dib.sms23246.ui.shop.SpeseSettimanali"
        android:label="@string/title_shopConfirmed"
        tools:layout="@layout/fragment_spesesettimanali" >
    </fragment>

    <fragment
        android:id="@+id/navigation_speseMensili"
        android:name="it.uniba.dib.sms23246.ui.shop.SpeseMensiliFragment"
        android:label="@string/title_shopConfirmed"
        tools:layout="@layout/fragment_spesemensili" >
    </fragment>

    <fragment
        android:id="@+id/navigation_speseCategoria"
        android:name="it.uniba.dib.sms23246.ui.shop.SpeseCategoriaFragment"
        android:label="@string/title_shopConfirmed"
        tools:layout="@layout/fragment_spesecategoria" >
    </fragment>

    <action
        android:id="@+id/action_ShopConfirmed"
        app:destination="@+id/navigation_shopConfirmed">
    </action>

    <action
        android:id="@+id/action_ShopSettimanali"
        app:destination="@+id/navigation_speseSettimanali">
    </action>

    <action
        android:id="@+id/action_ShopMensili"
        app:destination="@+id/navigation_speseMensili">
    </action>

    <action
        android:id="@+id/action_ShopCategoria"
        app:destination="@+id/navigation_speseCategoria">
    </action>


</navigation>